Web: prevent line breaks in log table datetimes

--- a/web/static/css/jsa_proc.css
+++ b/web/static/css/jsa_proc.css
@@ -253,6 +253,10 @@ th {
     -moz-hyphens: auto;
 }
 
+td.time, td.datetime {
+    white-space: nowrap;
+}
+
 .empty {
     border: none;
 }
